--- a/AMBE/add_form.html
+++ b/AMBE/add_form.html
@@ -3,16 +3,22 @@
 <html>
 <head>
     <title>Add User</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="add_form.css">
 </head>
 <body>
-    <h2>Add User</h2>
-    <form action="add_user.php" method="POST">
-        Name: <input type="text" name="name" required><br>
-        Email: <input type="email" name="email" required><br>
-        <input type="submit" value="Add User">
-    </form>
-    <a href="view_users.php">View Users</a>
+    <div class="title">
+        <h2>Add User</h2>
+    </div>
+    <div class="my-form">
+        <form action="add_user.php" method="POST">
+            Name: <input type="text" name="name" id="name-input" required><br>
+            Email: <input type="email" name="email" id="email-input" required><br>
+            <input type="submit" value="Add User" id="submit-button">
+        </form>
+    </div>
+    <div class="redirect-button">
+        <a href="view_users.php">View Users</a>
+    </div>
 </body>
 </html>
 
