--- a/AMBE/edit_form.html
+++ b/AMBE/edit_form.html
@@ -3,14 +3,20 @@
 <html>
 <head>
     <title>Edit User</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="add_form.css">
 </head>
 <body>
-    <h2>Edit User</h2>
-    <form action="edit_user.php" method="POST">
-        User ID: <input type="number" name="id" required><br>
-        <input type="submit" value="Edit User">
-    </form>
-    <a href="view_users.php">View Users</a>
+    <div class="title">
+        <h2>Edit User</h2>
+    </div>
+    <div class="my-form">
+        <form action="edit_user.php" method="POST">
+            User ID: <input id="name-input" name="id" required><br>
+            <input type="submit" value="Edit User" id="submit-button">
+        </form>
+    </div>
+    <div class="redirect-button">
+        <a href="view_users.php">View Users</a>
+    </div>
 </body>
 </html>
