transfrom on main div

--- a/AMBE/edit_form.html
+++ b/AMBE/edit_form.html
@@ -6,17 +6,19 @@
     <link rel="stylesheet" type="text/css" href="add_form.css">
 </head>
 <body>
-    <div class="title">
-        <h2>Edit User</h2>
-    </div>
-    <div class="my-form">
-        <form action="edit_user.php" method="POST">
-            User ID: <input id="name-input" name="id" required><br>
-            <input type="submit" value="Edit User" id="submit-button">
-        </form>
-    </div>
-    <div class="redirect-button">
-        <a href="view_users.php">View Users</a>
-    </div>
+    <div class="main">
+        <div class="title">
+            <h2>Edit User</h2>
+        </div>
+        <div class="my-form">
+            <form action="edit_user.php" method="POST">
+                User ID: <input id="name-input" name="id" required><br>
+                <input type="submit" value="Edit User" id="submit-button">
+            </form>
+        </div>
+        <div class="redirect-button">
+            <a href="view_users.php">View Users</a>
+        </div>
+    </div> 
 </body>
 </html>
