--- a/AMBE/delete_form.html
+++ b/AMBE/delete_form.html
@@ -6,17 +6,20 @@
     <link rel="stylesheet" type="text/css" href="add_form.css">
 </head>
 <body>
-    <div class="title">
-        <h2>Delete User</h2>
+    <div class="main">
+        <div class="title">
+            <h2>Delete User</h2>
+        </div>
+        <div class="my-form">
+            <form action="delete_user.php" method="POST">
+                User ID: <input type="number" name="id" id="name-input"><br>
+                <input type="submit" value="Delete User" id="submit-button">
+            </form>
+        </div>
+        <div class="redirect-button">
+            <a href="view_users.php">View Users</a>
+        </div>
+    
     </div>
-    <div class="my-form">
-        <form action="delete_user.php" method="POST">
-            User ID: <input type="number" name="id" id="name-input"><br>
-            <input type="submit" value="Delete User" id="submit-button">
-        </form>
-    </div>
-    <div class="redirect-button">
-        <a href="view_users.php">View Users</a>
-    </div>
-</body>
+    </body>
 </html>
