--- a/AMBE/add_form.html
+++ b/AMBE/add_form.html
@@ -6,19 +6,22 @@
     <link rel="stylesheet" type="text/css" href="add_form.css">
 </head>
 <body>
-    <div class="title">
-        <h2>Add User</h2>
+    <div class="main">
+        <div class="title">
+            <h2>Add User</h2>
+        </div>
+        <div class="my-form">
+            <form action="add_user.php" method="POST">
+                Name: <input type="text" name="name" id="name-input" required><br>
+                Email: <input type="email" name="email" id="email-input" required><br>
+                <input type="submit" value="Add User" id="submit-button">
+            </form>
+        </div>
+        <div class="redirect-button">
+            <a href="view_users.php">View Users</a>
+        </div>
+    
     </div>
-    <div class="my-form">
-        <form action="add_user.php" method="POST">
-            Name: <input type="text" name="name" id="name-input" required><br>
-            Email: <input type="email" name="email" id="email-input" required><br>
-            <input type="submit" value="Add User" id="submit-button">
-        </form>
-    </div>
-    <div class="redirect-button">
-        <a href="view_users.php">View Users</a>
-    </div>
-</body>
+   </body>
 </html>
 
